--- a/0.md
+++ b/0.md
@@ -16,7 +16,7 @@
 
 陷入了思考的怪圈。我思考思考，则通过思考得到的关于思考结论本身是否不足以反映思考这个过程的性质？
 
-这只狼睁开了双眼，听着哗啦啦的大雨。就在这片空无人烟的地方，注释着下雨的夜空，任凭雨水滴答在自己身上。
+这只狼睁开了双眼，听着哗啦啦的大雨。就在这片空无人烟的地方，注视着下雨的夜空，任凭雨水滴答在自己身上。
 
 我来到这里多久了？他想着。
 
