--- a/短篇内容/百纳海川.md
+++ b/短篇内容/百纳海川.md
@@ -30,7 +30,7 @@
 
 "并不。朋友和恋人会拘束你的双眼，当然也能让你看到新的一切。"
 
-"难得你这家伙讲出这么深刻的话。"绿色的狼用似笑非笑的眼神盯着对方。"是的。我会走自己的那条路，我有我的目标，你有你的目标。你的是你的，我的是我的。"
+"难得你这家伙讲出这种话。"绿色的狼用似笑非笑的眼神盯着对方。"是的。我会走自己的那条路，我有我的目标，你有你的目标。你的是你的，我的是我的。"
 
 "你这话挺绝情的不是吗？"
 
