--- a/welcome to FDU project/设定文档/海川.md
+++ b/welcome to FDU project/设定文档/海川.md
@@ -11,6 +11,6 @@
 --------
 
 1. 海川在中部地区干了几年的城主后就以一些捏造的理由被撤职了，被发配到北境做历史官。
-2. 海川非常健谈，也让人感觉有一种独特的亲和力。并且能感觉到他真的时时刻刻在为你着想，在这个世道下，是非常难得的一种品质。海川本性是一个温和且理智的人，视全世界的和平为自己的至高理想。这种性格的形成其实是因为海川幼年长期被人忽视所导致。在这个世道下，海川的性格与环境简直格格不入。
+2. 海川非常健谈，也让人感觉有一种独特的亲和力。并且能感觉到他真的时时刻刻在为你着想，在这个世道下，是非常难得的一种品质。海川本性是一个温和且理智的人，视全世界的和平为自己的至高理想。同时控制欲非常强，这种性格的形成其实是因为海川幼年长期被人忽视所导致。在这个世道下，海川的性格与环境简直格格不入。
 3. “我要在废墟之上，建立一个没有泪水的乐园。”
 
