--- a/welcome to FDU project/设定文档/白昼.md
+++ b/welcome to FDU project/设定文档/白昼.md
@@ -10,6 +10,6 @@
 
 -----
 
-1. 大川的同级战士。同为东部长大的狼人，性格和大川却截然不同。白昼性格坚韧而又理性，虽然有时候会被别人指责说冷漠无情，但却从不会被队友轻视，因为他们知道白昼是可以信赖的人。
+1. 大川的同级战士。同为东部长大的狼人，性格和大川却截然不同。白昼性格坚韧而又理性，虽然有时候会被别人议论说冷漠无情，但却从不会被队友轻视，因为他们知道白昼是可以信赖的人。
 
 2. "很多人都沉迷抽象事物。抽象是美好的，但是却忽视了具象事物的可能性。我们或许都应该更脚踏实地一点。"
